# hhnk-threedi-tools

./: .env.example  .gitattributes  .gitignore  .name_changes  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  api_ldo_key.txt  deploy.bat  index.html  objects.inv  pixi.toml  pixi_py39.toml  pyproject.toml  requirements.txt  ruff.toml  run_tests.cmd  setup.py  setup.py.bak  sitemap.xml  threedi_test.py  try_raster_scaling.py
Dev_docs/: TO_Hydroobjecten_uit_DAMO.drawio  Workflow gebruikers.drawio
binpixi/: enable_qgis_plugin.py  install_hrt.cmd  install_hydamo_validation.cmd  install_local.bat
classes/: default_paths.py
dataframe_functions/: conversion.py
deprecated/: test_folder_structures_old.py
envs/: conda-lock.yml  environment.yml  environment_dev.yml  environment_test.yml
folder_structure_and_paths/: build_base_paths_dict.py  build_output_files_dict.py  build_threedi_paths_dict.py  create_new_project.py  default_paths_class.py  get_working_paths.py  paths_functions.py
hhnk_threedi_tests/: __init__.py
hhnk_threedi_tools/: __init__.py
hhnk_wsa_tests/: input_error_messages.py
hhnk_wsa_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
local_tests/: README.md  test_damo_exporter.py
notebooks/: download_storage_raster_input.py
queries/: bank_levels_manholes.py  query_functions.py
read_write_functions/: write_to_file_functions.py
search/: search_index.json
sql_interaction/: query_functions.py  sql_functions.py
stylesheets/: extra.css
tests/: config.py  debug.py  intersections.gpkg  one_d_two_d_exception.py  (+51 more)
(+835 files in other folders)
