[build-system]
requires = ["setuptools"]

[project]
name = "hhnk-threedi-tools"
version = "2025.1"
description = "Tools for threedi model analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Wietse van Gerwen", email = "w.vangerwen@hhnk.nl" },
    { name = "Laure Ravier" },
    { name = "Bastiaan Roos" }
]
maintainers = [
    { name = "Wietse van Gerwen" }
]
keywords = []

[project.urls]
repository = "https://github.com/threedi/hhnk-threedi-tools"

[tool.setuptools]
packages = { find = { include = ["hhnk_threedi_tools"] } }
include-package-data = true

# FORMATTING
[tool.ruff]
# see https://docs.astral.sh/ruff/rules/ for meaning of rules
line-length = 119

#Exclude external packages in formatter
extend-exclude = ["hhnk_threedi_tools/external/**/*.py", ".pixi/*", "deprecated/*", "tests/rioxarraytesting/*"]
include = ["*.py"]

[tool.ruff.lint]
select = ["D", "E", "F", "NPY", "PD", "C4", "I"]
ignore = ["D1", "D202", "D205", "D400", "D404", "E501", "PD002", "PD901"]
fixable = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in init
"__init__.py" = ["F401",  "I001"]

[tool.pylint]
disable = ["W1203"]